Added viewmodel to main activity; began handling submission intent from new entry activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="beer_name">Beer Name</string>
     <string name="add_new">Add New</string>
     <string name="button_save">Save</string>
+    <string name="entry_not_saved">Entry not saved</string>
 </resources>
